@@ -1,56 +1,120 @@
+//package com.ds.app.entity;
+//
+//import java.util.Arrays;
+//import java.util.Collection;
+//
+//import org.springframework.security.core.GrantedAuthority;
+//import org.springframework.security.core.authority.SimpleGrantedAuthority;
+//import org.springframework.security.core.userdetails.UserDetails;
+//
+//public class MyUserDetails implements UserDetails{
+//
+//	private AppUser user;
+//
+//	public MyUserDetails(AppUser user) {
+//		super();
+//		this.user = user;
+//	}
+//
+//	@Override
+//	public Collection<? extends GrantedAuthority> getAuthorities() {
+//		SimpleGrantedAuthority a = new SimpleGrantedAuthority(user.getRole().toString());
+//		return Arrays.asList(a);
+//	}
+//
+//	@Override
+//	public String getPassword() {
+//		return user.getPassword();
+//	}
+//
+//	@Override
+//	public String getUsername() {
+//		return user.getUsername();
+//	}
+//
+//	@Override
+//	public boolean isAccountNonExpired() {
+//		return true;
+//	}
+//
+//	@Override
+//	public boolean isAccountNonLocked() {
+//		return true;
+//	}
+//
+//	@Override
+//	public boolean isCredentialsNonExpired() {
+//		return true;
+//	}
+//
+//	@Override
+//	public boolean isEnabled() {
+//		return true;
+//	}
+//	
+//	
+//}
+
+
 package com.ds.app.entity;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-public class MyUserDetails implements UserDetails{
+public class MyUserDetails implements UserDetails {
 
-	private AppUser user;
+    private final AppUser user;
 
-	public MyUserDetails(AppUser user) {
-		super();
-		this.user = user;
-	}
+    public MyUserDetails(AppUser user) {
+        this.user = user;
+    }
 
-	@Override
-	public Collection<? extends GrantedAuthority> getAuthorities() {
-		SimpleGrantedAuthority a = new SimpleGrantedAuthority(user.getRole().toString());
-		return Arrays.asList(a);
-	}
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        String roleName = "ROLE_" + user.getRole().name();
+        return List.of(new SimpleGrantedAuthority(roleName));
+    }
 
-	@Override
-	public String getPassword() {
-		return user.getPassword();
-	}
+    @Override
+    public String getPassword() {
+        return user.getPassword(); //BCrypt hash from DB
+    }
 
-	@Override
-	public String getUsername() {
-		return user.getUsername();
-	}
+    @Override
+    public String getUsername() {
+        return user.getUsername();
+    }
 
-	@Override
-	public boolean isAccountNonExpired() {
-		return true;
-	}
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
 
-	@Override
-	public boolean isAccountNonLocked() {
-		return true;
-	}
+    @Override
+    public boolean isAccountNonLocked() {
+        return !Boolean.TRUE.equals(user.getIsAccountLocked());
+    }
 
-	@Override
-	public boolean isCredentialsNonExpired() {
-		return true;
-	}
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
 
-	@Override
-	public boolean isEnabled() {
-		return true;
-	}
-	
-	
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
+    //Convenience helpers (optional but useful)
+    public Long getUserId() {
+        return user.getUserId();
+    }
+
+    public AppUser getUser() {
+        return user;
+    }
 }
